--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script id="root" type="module" src="./src/main.js"></script>
+    <script id="root" type="module" src="./spa/src/main.js"></script>
 </body>
 </html>
